Map formatting, Run it btn CSS, alignment fixes

--- a/cagrid/Applications/cagrid-portal/portals/liferay/src/themes/cagrid-new-theme/css/base.css
+++ b/cagrid/Applications/cagrid-portal/portals/liferay/src/themes/cagrid-new-theme/css/base.css
@@ -133,7 +133,7 @@ h3 {
 }
 
 h1, h2, h3 {
-	margin: 1em 0;
+	margin: 0 0 0.5em 0;
 }
 
 h4, h5, h6 {
