--- a/cagrid/Applications/cagrid-portal/portlets/src/war/css/latest-content.css
+++ b/cagrid/Applications/cagrid-portal/portlets/src/war/css/latest-content.css
@@ -1,14 +1,20 @@
-
 #latestContent{
-    padding-top:10px;
-    width:25%;
+    width:290px;
     float:left;
 }
-
-#latestContentTitle{
-    font-size:1.2em;
-    font-weight:bold;
-    padding-bottom:10px;
+.oneLatestEntry {
+	overflow:auto;
 }
-
-
+#latestContent div.label{
+	font-weight:normal;
+}
+body a.infoPopupLink{
+	font-weight:normal;
+	text-decoration:underline;
+}
+#latestContent img {
+	margin-right:10px;
+}
+body .infoPopup {
+	left:465px;
+}
